kubernetes/base/voting/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting
  labels:
    app: voting
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting
  template:
    metadata:
      labels:
        app: voting
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "voting"
        vault.hashicorp.com/agent-inject-secret-postgres: "secret/data/craftista/ENV/voting/postgres"
    spec:
      serviceAccountName: voting
      containers:
        - name: voting
          image: charliepoker/craftista-voting:latest
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
