kubernetes/base/voting/rollout.yaml
apiVersion: apps/v1
kind: Rollout
metadata:
  name: voting
  labels:
    app: voting
    component: api
spec:
  strategy:
    canary:
      canaryService: craftista-voting-canary
      stableService: craftista-voting
      trafficRouting:
        nginx:
          stableIngress: voting
      steps:
        - setWeight: 20
        - pause: {duration: 2m}
        - setWeight: 50
        - pause: {duration: 2m}
        - setWeight: 80
        - pause: {duration: 1m}
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: voting
  template:
    metadata:
      labels:
        app: voting
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "voting"
        vault.hashicorp.com/agent-inject-secret-postgres: "secret/data/craftista/ENV/voting/postgres"
    spec:
      serviceAccountName: voting
      imagePullSecrets:
        - name: dockerhub-pull-secret
      containers:
        - name: voting
          image: 8060633493/craftista-voting:v1.0.0
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /api/origamis
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /api/origamis
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
