kubernetes/base/voting/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: craftista-voting
  labels:
    app: voting
    component: api
spec:
  type: ClusterIP
  selector:
    app: voting
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
